@@ -11,6 +11,7 @@ lldpd (0.7.9)
       it as default.
   * Features:
     + Add support for shutdown LLDPU.
+    + Ability to configure IP management pattern from lldpcli.
 
 lldpd (0.7.8)
   * Fixes:
